<resources>
    <string name="app_name">环境监管</string>
    <string name="exit_info">再按一次退出</string>

    <!--登录页面-->
    <string name="hint_login_username">请输入您的用户名</string>
    <string name="hint_login_password">请输入您的密码</string>
    <string name="button_login">登 录</string>
    <string name="check_login">记住密码</string>
    <string name="button_setting">配 置</string>
    <string name="title_login_setting">请输入服务器地址：</string>
    <string name="hint_login_setting">如：192.168.3.208:8180</string>
    <string name="button_ok">确 定</string>

    <!--TAB标签-->
    <string name="navigation_home">首页</string>
    <string name="navigation_work">工作</string>
    <string name="navigation_me">我的</string>

    <!--首页-->
    <string name="activity_task_title">任务提醒</string>
    <string name="button_sign">标记报警</string>
    <string name="ep_first">1.您有一条任务需要在2017年5月13日之前处理，请及时查看！</string>
    <!--标记报警-->
    <string name="activity_sign_title">标记报警</string>
    <!--监控报警-->
    <string name="activity_monitor_title">监控报警</string>
    <!--监督检查-->
    <string name="activity_supervision_title">监督检查</string>
    <string name="activity_supervision_subtitle">待办任务</string>
    <string name="text_supervision_header_task">任务名称</string>
    <string name="text_supervision_header_poll">企业名称</string>
    <string name="text_supervision_header_time">截止时间</string>
    <string name="text_supervision_header_handle">操作</string>
    <!--监督检查——企业信息-->
    <string name="activity_supervision_poll_title">企业信息</string>
    <!--监督检查——现场检查结果记录-->
    <string name="activity_supervision_local_check">现场检查结果记录</string>
    <!--监督检查——签字确认-->
    <string name="activity_supervision_sign_confirm">签字确认</string>
    <string name="activity_sign_second_title">已标记报警</string>
    <!--监督检查——治污工艺-->
    <string name="activity_pollution_control">治污工艺详情</string>
    <!--监督检查——治污工艺-表头-->
    <string name="text_pollution_facility">设施名称</string>
    <string name="text_pollution_creat_time">建设日期</string>
    <string name="text_pollution_opr_time">投运日期</string>
    <string name="text_pollution_handle">处理工艺</string>
    <string name="text_pollution_design">设计处理能力</string>
    <string name="text_pollution_run">运行情况</string>
    <!--现场检查监督指导-->
    <string name="activity_local_supervision_title">现场检查监督指导</string>
    <!--历史问题查看-->
    <string name="activity_history_title">历史问题查看</string>
    !--我的界面-->
    <string name="my_feedback_content_hint">反馈内容</string>
    <string name="my_feedback_contact_hint">联系方式（Email、QQ号或其他）</string>
    <string name="my_feedback_tips">你的联系方式有助于我们沟通和解决问题，仅工作人员可见</string>
    <string name="my_feedback_submit">提交反馈</string>
    <string name="my_service_leave_message">问题留言</string>
    <string name="my_service_normal_question">常见问题反馈</string>
    <string name="my_service_check_question_type">请选择问题类型</string>
    <string name="my_service_check_normal_type">请选择异常类型</string>
    <string name="my_service_use_help">使用帮助</string>
</resources>
