<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_50dp"
        android:layout_marginRight="@dimen/dimen_50dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <ImageView
            android:layout_width="@dimen/dimen_180dp"
            android:layout_height="@dimen/dimen_180dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:src="@mipmap/loginlogo"
            tools:ignore="ContentDescription" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/translucent_angle_bg"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen_10dp"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_0dp"
            android:paddingRight="@dimen/dimen_0dp">

            <ImageView
                android:id="@+id/img_1"
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_30dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/username_icon"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/et_username"
                style="@style/BaseEditText"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_toEndOf="@+id/img_1"
                android:background="@android:color/transparent"
                android:hint="@string/hint_login_username"
                android:paddingLeft="@dimen/dimen_10dp"
                android:paddingStart="@dimen/dimen_10dp"
                android:paddingEnd="@dimen/dimen_0dp"
                android:paddingRight="@dimen/dimen_0dp"
                android:textColorHint="@color/bg_item_translucent"
                android:textSize="14sp"
                android:layout_toRightOf="@+id/img_1"
                android:maxLines="1" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@drawable/translucent_angle_bg"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dimen_10dp"
            android:paddingStart="@dimen/dimen_10dp"
            android:paddingEnd="@dimen/dimen_0dp"
            android:paddingRight="@dimen/dimen_0dp">
            <ImageView
                android:id="@+id/img_2"
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_30dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/pwd_icon"
                android:contentDescription=""
                tools:ignore="ContentDescription" />
            <EditText
                android:id="@+id/et_password"
                style="@style/BaseEditText"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_toRightOf="@+id/img_2"
                android:layout_toEndOf="@+id/img_2"
                android:background="@android:color/transparent"
                android:hint="@string/hint_login_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dimen_10dp"
                android:paddingStart="@dimen/dimen_10dp"
                android:paddingEnd="@dimen/dimen_0dp"
                android:paddingRight="@dimen/dimen_0dp"
                android:textColorHint="@color/bg_item_translucent"
                android:textSize="14sp"
                android:maxLines="1" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:visibility="invisible">
            <CheckBox
                android:id="@+id/check_box_remeber"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/selector_check"
                android:button="@null"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_login"
                android:gravity="center_vertical"
                android:textColor="@color/light_blue"
                android:layout_marginRight="@dimen/dimen_4dp"
                android:layout_marginEnd="@dimen/dimen_4dp"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/login"
                style="?android:attr/buttonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dimen_4dp"
               android:layout_marginStart="@dimen/dimen_4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_blue_selector"
                android:text="@string/button_login"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <Button
                android:id="@+id/configuration"
                android:layout_width="0dp"
                style="?android:attr/buttonStyle"
                android:layout_height="@dimen/dimen_35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_4dp"
                android:layout_marginEnd="@dimen/dimen_4dp"
                android:layout_weight="1"
                android:background="@drawable/btn_blue_selector"
                android:text="@string/button_setting"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:visibility="gone"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_configuration"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:orientation="vertical"
            android:visibility="invisible"
            >
            <TextView
                android:id="@+id/tv_ip"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/title_login_setting"
                android:textColor="@color/white" />
            <EditText
                android:id="@+id/edit_configuration"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/white_angle_bg"
                android:hint="@string/hint_login_setting"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                />
            <Button
                android:id="@+id/btn_configuration"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                style="?android:attr/buttonStyle"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:background="@drawable/btn_orange_selector"
                android:text="@string/button_ok"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>